[project]
name = "comfyui-ollama-llms"
description = "Ollama and Llava vision integration for ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/fairy-root/comfyui-ollama-llms"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fairy-root"
DisplayName = "comfyui-ollama-llms"
Icon = ""
